--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
+  },
+  "volta": {
+    "node": "16.16.0",
+    "yarn": "1.22.19"
   }
 }
