--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.4",
     "daisyui": "^2.19.0",
     "next": "12.2.2",
     "react": "18.2.0",
