--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.4",
+    "aos": "^2.3.4",
     "daisyui": "^2.19.0",
     "next": "12.2.2",
     "react": "18.2.0",
