--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "deploy:production": "ssh payplo \"bash ~/deploy-production.sh\""
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
     "@tailwindcss/typography": "^0.5.4",
     "@types/aos": "^3.0.4",
     "aos": "^2.3.4",
+    "chart.js": "^3.9.1",
     "daisyui": "^2.19.0",
     "next": "12.2.2",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
