--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "@svgr/webpack": "^6.3.1",
     "@tailwindcss/typography": "^0.5.4",
     "@types/aos": "^3.0.4",
     "aos": "^2.3.4",
