--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "12.2.2",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-id-generator": "^3.0.2"
   },
   "devDependencies": {
     "@ky-is/tailwindcss-plugin-width-height": "^1.0.0",
