--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "baseUrl": "./",
+    "paths": {
+      "^components/*": ["./src/components/*"],
+      "^pages/*": ["./src/pages/*"],
+      "^api/*": ["./src/api/*"],
+      "^styles/*": ["./src/styles/*"],
+      "^types/*": ["./src/types/*"]
+    },
     "incremental": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
