--- a/package.json
+++ b/package.json
@@ -11,25 +11,36 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "@react-icons/all-files": "^4.1.0",
     "@svgr/webpack": "^6.3.1",
     "@tailwindcss/typography": "^0.5.4",
     "@types/aos": "^3.0.4",
+    "@types/qs": "^6.9.7",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "daisyui": "^2.19.0",
     "next": "12.2.2",
+    "qs": "^6.11.0",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
-    "react-id-generator": "^3.0.2"
+    "react-icons": "^4.4.0",
+    "react-id-generator": "^3.0.2",
+    "react-select": "^5.4.0",
+    "react-select2-wrapper": "^1.0.4-beta6",
+    "react-toastify": "^9.0.8",
+    "sass": "^1.54.8",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@ky-is/tailwindcss-plugin-width-height": "^1.0.0",
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-select": "^5.0.1",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "autoprefixer": "^10.4.7",
@@ -46,5 +57,8 @@
   "volta": {
     "node": "16.16.0",
     "yarn": "1.22.19"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
