--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "qs": "^6.11.0",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
@@ -38,6 +39,7 @@
     "@ky-is/tailwindcss-plugin-width-height": "^1.0.0",
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.6",
     "@types/react-select": "^5.0.1",
     "@types/styled-components": "^5.1.26",
