--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "12.2.2",
     "qs": "^6.11.0",
     "react": "18.2.0",
+    "react-calendar": "^4.0.0",
     "react-chartjs-2": "^4.3.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-device-detect": "^2.2.2",
@@ -43,6 +44,7 @@
     "@ky-is/tailwindcss-plugin-width-height": "^1.0.0",
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
+    "@types/react-calendar": "^3.5.3",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.6",
     "@types/react-select": "^5.0.1",
