--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "daisyui": "^2.19.0",
+    "moment": "^2.29.4",
     "next": "12.2.2",
     "qs": "^6.11.0",
     "react": "18.2.0",
