import 안되어있는 것 수정 및 프리티어 성원님 기준으로 bracketSpacing false 추가

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ coverage
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
+tsconfig.tsbuildinfo
 
 # Dependency directories
 node_modules
