--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-select": "^5.4.0",
     "react-select2-wrapper": "^1.0.4-beta6",
     "react-toastify": "^9.0.8",
+    "recoil": "^0.7.6",
     "sass": "^1.54.8",
     "styled-components": "^5.3.5"
   },
