빌드 실패 해결 : page 디렉토리에 아톰 컴포넌트가 들어있어 밖으로 뺌

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
       "^hooks/*": ["./src/hooks/*"],
       "^layouts/*": ["./src/layouts/*"],
       "^components/*": ["./src/components/*"],
+      "^atoms/*": ["./src/atoms/*"],
       "^pages/*": ["./src/pages/*"],
       "^api/*": ["./src/api/*"],
       "^styles/*": ["./src/styles/*"],
