--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "daisyui": "^2.19.0",
+    "dayjs": "^1.11.7",
     "env-cmd": "^10.1.0",
     "next": "12.2.2",
     "qs": "^6.11.0",
@@ -38,6 +39,7 @@
     "react-loading-icons": "^1.1.0",
     "react-select": "^5.4.0",
     "react-select2-wrapper": "^1.0.4-beta6",
+    "react-tailwindcss-datepicker": "^1.3.2",
     "react-toastify": "^9.0.8",
     "recoil": "^0.7.6",
     "sass": "^1.54.8",
