--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.6",
     "tsconfig-paths": "^4.1.0",
-    "typescript": "4.7.4"
+    "typescript": "^4.9.5"
   },
   "volta": {
     "node": "16.16.0",
