--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@react-icons/all-files": "^4.1.0",
+    "@react-oauth/google": "^0.7.0",
     "@svgr/webpack": "^6.3.1",
     "@tailwindcss/typography": "^0.5.4",
     "@types/aos": "^3.0.4",
