--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,32 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "baseUrl": "./",
-    "paths": {
-      "^utils/*": ["./src/utils/*"],
-      "^hooks/*": ["./src/hooks/*"],
-      "^layouts/*": ["./src/layouts/*"],
-      "^components/*": ["./src/components/*"],
-      "^atoms/*": ["./src/atoms/*"],
-      "^pages/*": ["./src/pages/*"],
-      "^api/*": ["./src/api/*"],
-      "^styles/*": ["./src/styles/*"],
-      "^types/*": ["./src/types/*"]
+    "compilerOptions": {
+        "target": "es5",
+        "lib": ["dom", "dom.iterable", "esnext"],
+        "allowJs": true,
+        "skipLibCheck": true,
+        "strict": true,
+        "forceConsistentCasingInFileNames": true,
+        "noEmit": true,
+        "esModuleInterop": true,
+        "module": "esnext",
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "jsx": "preserve",
+        "baseUrl": "./",
+        "paths": {
+            "^utils/*": ["./src/utils/*"],
+            "^hooks/*": ["./src/hooks/*"],
+            "^layouts/*": ["./src/layouts/*"],
+            "^components/*": ["./src/components/*"],
+            "^atoms/*": ["./src/atoms/*"],
+            "^pages/*": ["./src/pages/*"],
+            "^api/*": ["./src/api/*"],
+            "^styles/*": ["./src/styles/*"],
+            "^types/*": ["./src/types/*"]
+        },
+        "incremental": true
     },
-    "incremental": true
-  },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "public/service-worker.js"],
+    "exclude": ["node_modules"]
 }
