--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@svgr/webpack": "^6.3.1",
     "@tailwindcss/typography": "^0.5.4",
     "@types/aos": "^3.0.4",
+    "@types/crypto-js": "^4.1.1",
     "@types/qs": "^6.9.7",
     "@types/web-push": "^3.3.2",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "crypto-js": "^4.1.1",
     "daisyui": "^2.19.0",
     "dayjs": "^1.11.7",
     "env-cmd": "^10.1.0",
