--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-oauth/google": "^0.7.0",
     "@svgr/webpack": "^6.3.1",
     "@tailwindcss/typography": "^0.5.4",
+    "@toast-ui/react-editor": "^3.2.3",
     "@types/aos": "^3.0.4",
     "@types/crypto-js": "^4.1.1",
     "@types/qs": "^6.9.7",
