--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "daisyui": "^2.19.0",
     "dayjs": "^1.11.7",
     "env-cmd": "^10.1.0",
+    "firebase": "^9.17.2",
     "next": "12.2.2",
     "qs": "^6.11.0",
     "react": "18.2.0",
