--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy:production": "ssh payplo \"bash ~/deploy-production.sh\""
   },
   "dependencies": {
+    "@googleapis/docs": "^2.0.1",
     "@headlessui/react": "^1.6.6",
     "@react-icons/all-files": "^4.1.0",
     "@react-oauth/google": "^0.7.0",
@@ -25,12 +26,18 @@
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "countup.js": "^2.6.0",
     "crypto-js": "^4.1.1",
     "daisyui": "^2.19.0",
     "dayjs": "^1.11.7",
     "env-cmd": "^10.1.0",
     "firebase": "^9.17.2",
+    "fs": "^0.0.1-security",
+    "google-auth-library": "^8.7.0",
+    "googleapis": "^118.0.0",
+    "js-base64": "^3.7.5",
     "next": "12.2.2",
+    "pdfjs-dist": "^3.5.141",
     "qs": "^6.11.0",
     "react": "18.2.0",
     "react-calendar": "^4.0.0",
