--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
         "baseUrl": "./",
         "paths": {
             "^utils/*": ["./src/utils/*"],
+            "^config/*": ["./src/config/*"],
             "^hooks/*": ["./src/hooks/*"],
             "^layouts/*": ["./src/layouts/*"],
             "^components/*": ["./src/components/*"],
