--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-select": "^5.4.0",
     "react-tailwindcss-datepicker": "^1.3.2",
     "react-toastify": "^9.0.8",
+    "react-type-animation": "^3.0.1",
     "recoil": "^0.7.6",
     "sass": "^1.54.8",
     "sharp": "^0.31.2",
