--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/aos": "^3.0.4",
     "@types/crypto-js": "^4.1.1",
     "@types/qs": "^6.9.7",
+    "@types/react-input-mask": "^3.0.2",
     "@types/web-push": "^3.3.2",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
@@ -49,6 +50,7 @@
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
     "react-id-generator": "^3.0.2",
+    "react-input-mask": "3.0.0-alpha.2",
     "react-loading-icons": "^1.1.0",
     "react-select": "^5.4.0",
     "react-tailwindcss-datepicker": "^1.3.2",
