--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@toast-ui/react-editor": "^3.2.3",
     "@types/aos": "^3.0.4",
     "@types/crypto-js": "^4.1.1",
+    "@types/lodash": "^4.14.194",
     "@types/qs": "^6.9.7",
     "@types/react-input-mask": "^3.0.2",
     "@types/web-push": "^3.3.2",
@@ -37,6 +38,7 @@
     "google-auth-library": "^8.7.0",
     "googleapis": "^118.0.0",
     "js-base64": "^3.7.5",
+    "lodash": "^4.17.21",
     "next": "12.2.2",
     "pdfjs-dist": "^3.5.141",
     "qs": "^6.11.0",
