--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-calendar": "^4.0.0",
     "react-chartjs-2": "^4.3.1",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-daum-postcode": "^3.1.1",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.2",
