메인 페이지 1차

--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@toast-ui/react-editor": "^3.2.3",
     "@types/aos": "^3.0.4",
     "@types/crypto-js": "^4.1.1",
+    "@types/date-fns": "^2.6.0",
     "@types/lodash": "^4.14.194",
     "@types/qs": "^6.9.7",
+    "@types/react-date-range": "^1.4.4",
     "@types/react-input-mask": "^3.0.2",
     "@types/web-push": "^3.3.2",
     "aos": "^2.3.4",
@@ -31,6 +33,7 @@
     "countup.js": "^2.6.0",
     "crypto-js": "^4.1.1",
     "daisyui": "^2.19.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
     "env-cmd": "^10.1.0",
     "firebase": "^9.17.2",
@@ -46,12 +49,13 @@
     "react-calendar": "^4.0.0",
     "react-chartjs-2": "^4.3.1",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-date-range": "^1.4.0",
     "react-daum-postcode": "^3.1.1",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.2",
     "react-hook-form": "^7.34.2",
-    "react-icons": "^4.4.0",
+    "react-icons": "4.8.0",
     "react-id-generator": "^3.0.2",
     "react-input-mask": "3.0.0-alpha.2",
     "react-loading-icons": "^1.1.0",
