--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "fs": "^0.0.1-security",
     "google-auth-library": "^8.7.0",
     "googleapis": "^118.0.0",
+    "i18next": "^22.5.0",
     "js-base64": "^3.7.5",
     "lodash": "^4.17.21",
     "next": "12.2.2",
+    "next-i18next": "^13.2.2",
     "pdfjs-dist": "^3.5.141",
     "qs": "^6.11.0",
     "react": "18.2.0",
@@ -55,6 +57,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.2",
     "react-hook-form": "^7.34.2",
+    "react-i18next": "^12.3.1",
     "react-icons": "4.8.0",
     "react-id-generator": "^3.0.2",
     "react-input-mask": "3.0.0-alpha.2",
