스테이징 배포 방식 변경 (스크리트로 로컬에서 빌드 후 ssh 로 업로드)

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:production": "./node_modules/.bin/env-cmd -f .env.production next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy:staging": "ssh payplo \"bash ~/deploy-staging.sh\"",
+    "deploy:staging": "bash tasks/deploy.staging.sh",
     "deploy:production": "ssh payplo \"bash ~/deploy-production.sh\""
   },
   "dependencies": {
