--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "react-dropzone": "^14.2.2",
     "react-hook-form": "^7.34.2",
     "react-i18next": "^12.3.1",
-    "react-icons": "4.8.0",
+    "react-icons": "^4.10.1",
     "react-id-generator": "^3.0.2",
     "react-input-mask": "3.0.0-alpha.2",
     "react-loading-icons": "^1.1.0",
