--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "class-transformer": "^0.5.1",
     "countup.js": "^2.6.0",
     "crypto-js": "^4.1.1",
     "daisyui": "^2.52.0",
