--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^1.6.6",
     "@react-icons/all-files": "^4.1.0",
     "@react-oauth/google": "^0.7.0",
+    "@sentry/nextjs": "^7.60.0",
     "@svgr/webpack": "^6.3.1",
     "@tailwindcss/typography": "^0.5.4",
     "@toast-ui/react-editor": "^3.2.3",
