--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
             "^layouts/*": ["./src/layouts/*"],
             "^components/*": ["./src/components/*"],
             "^v3/*": ["./src/components/pages/v3/*"],
+            "^admin/*": ["./src/components/pages/admin/*"],
             "^atoms/*": ["./src/atoms/*"],
             "^pages/*": ["./src/pages/*"],
             "^api/*": ["./src/api/*"],
