BillingHistory 데이터모델 추가 및 리펙토링

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
             "^atoms/*": ["./src/atoms/*"],
             "^pages/*": ["./src/pages/*"],
             "^api/*": ["./src/api/*"],
+            "^models/*": ["./src/models/*"],
             "^styles/*": ["./src/styles/*"],
             "^types/*": ["./src/types/*"]
         },
