--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy:production": "bash tasks/deploy.production.sh"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.22.15",
     "@googleapis/docs": "^2.0.1",
     "@headlessui/react": "^1.6.6",
     "@react-icons/all-files": "^4.1.0",
@@ -38,6 +39,7 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.8",
     "env-cmd": "^10.1.0",
+    "es6-shim": "^0.35.8",
     "firebase": "^9.17.2",
     "fs": "^0.0.1-security",
     "google-auth-library": "^8.7.0",
@@ -69,6 +71,7 @@
     "react-toastify": "^9.0.8",
     "react-type-animation": "^3.0.1",
     "recoil": "^0.7.6",
+    "reflect-metadata": "^0.1.13",
     "sass": "^1.54.8",
     "sharp": "^0.31.2",
     "styled-components": "^5.3.5",
