--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.2",
     "react-hook-form": "^7.34.2",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "^12.3.1",
     "react-icons": "^4.10.1",
     "react-id-generator": "^3.0.2",
