--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/plugin-proposal-decorators": "^7.22.15",
     "@googleapis/docs": "^2.0.1",
     "@headlessui/react": "^1.6.6",
+    "@popperjs/core": "^2.11.8",
     "@react-icons/all-files": "^4.1.0",
     "@react-oauth/google": "^0.7.0",
     "@sentry/nextjs": "^7.60.0",
@@ -67,6 +68,7 @@
     "react-id-generator": "^3.0.2",
     "react-input-mask": "3.0.0-alpha.2",
     "react-loading-icons": "^1.1.0",
+    "react-popper": "^2.3.0",
     "react-select": "^5.4.0",
     "react-tailwindcss-datepicker": "^1.3.2",
     "react-toastify": "^9.0.8",
