--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-date-range": "^1.4.4",
     "@types/react-input-mask": "^3.0.2",
     "@types/web-push": "^3.3.2",
+    "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
@@ -79,6 +80,7 @@
     "sharp": "^0.31.2",
     "styled-components": "^5.3.5",
     "sweetalert2": "^11.7.2",
+    "sweetalert2-react-content": "^5.0.7",
     "web-push": "^3.5.0"
   },
   "devDependencies": {
