--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sentry/nextjs": "^7.60.0",
     "@svgr/webpack": "^6.3.1",
     "@tailwindcss/typography": "^0.5.4",
+    "@tippyjs/react": "^4.2.6",
     "@toast-ui/react-editor": "^3.2.3",
     "@types/aos": "^3.0.4",
     "@types/crypto-js": "^4.1.1",
