랜딩페이지 / 푸터에 매쉬업벤처스 로고 추가 & 스코디 로고 로딩 최적화

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
         "jsx": "preserve",
         "baseUrl": "./",
         "paths": {
+            "^public/*": ["./public/*"],
             "^utils/*": ["./src/utils/*"],
             "^config/*": ["./src/config/*"],
             "^hooks/*": ["./src/hooks/*"],
