--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/plugin-proposal-decorators": "^7.22.15",
     "@googleapis/docs": "^2.0.1",
     "@headlessui/react": "^1.6.6",
+    "@measured-im/browser": "^1.3.0",
     "@popperjs/core": "^2.11.8",
     "@react-icons/all-files": "^4.1.0",
     "@react-oauth/google": "^0.7.0",
