--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-popper": "^2.3.0",
     "react-select": "^5.4.0",
     "react-tailwindcss-datepicker": "^1.3.2",
+    "react-textarea-autosize": "^8.5.3",
     "react-toastify": "^9.0.8",
     "react-type-animation": "^3.0.1",
     "recoil": "^0.7.6",
