--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/typography": "^0.5.4",
     "@tippyjs/react": "^4.2.6",
     "@toast-ui/react-editor": "^3.2.3",
+    "@tosspayments/tosspayments-sdk": "^2.2.4",
     "@types/aos": "^3.0.4",
     "@types/crypto-js": "^4.1.1",
     "@types/date-fns": "^2.6.0",
