--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sentry/nextjs": "^7.77.0",
     "@svgr/webpack": "^6.3.1",
     "@tailwindcss/typography": "^0.5.4",
+    "@tanstack/react-query": "^5.56.2",
     "@tippyjs/react": "^4.2.6",
     "@toast-ui/react-editor": "^3.2.3",
     "@types/aos": "^3.0.4",
