--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-id-generator": "^3.0.2",
     "react-input-mask": "3.0.0-alpha.2",
     "react-loading-icons": "^1.1.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-popper": "^2.3.0",
     "react-select": "^5.4.0",
     "react-tailwindcss-datepicker": "^1.3.2",
