git 에서 Lock 파일 제거 / yarn, npm

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,10 @@ jspm_packages
 .yarn
 .yarnrc.yml
 
+# Lock file
+yarn.lock
+package-lock.json
+
 # Optional REPL history
 .node_repl_history
 .next
