--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "pluralize": "^8.0.0",
     "qs": "^6.11.0",
     "react": "18.2.0",
-    "react-calendar": "^4.0.0",
+    "react-calendar": "4.0.0",
     "react-chartjs-2": "^4.3.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-date-range": "^1.4.0",
@@ -65,7 +65,7 @@
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.2",
-    "react-hook-form": "^7.34.2",
+    "react-hook-form": "7.34.2",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^12.3.1",
     "react-icons": "^5.3.0",
@@ -118,6 +118,7 @@
     "yarn": "1.22.19"
   },
   "resolutions": {
-    "styled-components": "^5"
+    "styled-components": "^5",
+    "@types/react": "18.0.15"
   }
 }
