--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@sentry/nextjs": "^7.77.0",
     "@svgr/webpack": "^6.3.1",
     "@tailwindcss/typography": "^0.5.4",
-    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query": "^5.59.16",
     "@tippyjs/react": "^4.2.6",
     "@toast-ui/react-editor": "^3.2.3",
     "@tosspayments/payment-widget-sdk": "^0.12.0",
@@ -40,6 +40,7 @@
     "axios": "^1.7.7",
     "chart.js": "^3.9.1",
     "class-transformer": "^0.5.1",
+    "classnames": "^2.5.1",
     "countup.js": "^2.6.0",
     "crypto-js": "^4.2.0",
     "daisyui": "^2.52.0",
