--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@googleapis/docs": "^2.0.1",
     "@headlessui/react": "^1.6.6",
     "@measured-im/browser": "^1.3.1",
+    "@mona-health/react-input-mask": "^3.0.3",
     "@popperjs/core": "^2.11.8",
     "@react-icons/all-files": "^4.1.0",
     "@react-oauth/google": "^0.7.0",
@@ -33,7 +34,6 @@
     "@types/lodash": "^4.14.194",
     "@types/qs": "^6.9.7",
     "@types/react-date-range": "^1.4.4",
-    "@types/react-input-mask": "^3.0.2",
     "@types/web-push": "^3.3.2",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
@@ -73,7 +73,6 @@
     "react-i18next": "^12.3.1",
     "react-icons": "^5.3.0",
     "react-id-generator": "^3.0.2",
-    "react-input-mask": "3.0.0-alpha.2",
     "react-loading-icons": "^1.1.0",
     "react-loading-skeleton": "^3.5.0",
     "react-popper": "^2.3.0",
