--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
     "sweetalert2": "^11.7.2",
     "sweetalert2-react-content": "^5.0.7",
     "use-local-storage": "^3.0.0",
-    "web-push": "^3.5.0"
+    "web-push": "^3.5.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@ky-is/tailwindcss-plugin-width-height": "^1.0.0",
