--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-textarea-autosize": "^8.5.3",
     "react-toastify": "^9.0.8",
     "react-type-animation": "^3.0.1",
+    "recharts": "^2.15.0",
     "recoil": "^0.7.6",
     "recoil-persist": "^5.1.0",
     "reflect-metadata": "^0.1.13",
