--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-popper": "^2.3.0",
     "react-select": "^5.4.0",
+    "react-svg-unique-id": "^1.3.3",
     "react-tailwindcss-datepicker": "^1.3.2",
     "react-textarea-autosize": "^8.5.3",
     "react-toastify": "^9.0.8",
