--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@react-oauth/google": "^0.7.0",
     "@sentry/nextjs": "^7.77.0",
+    "@slack/web-api": "^7.8.0",
     "@svgr/webpack": "^6.3.1",
     "@tailwindcss/typography": "^0.5.4",
     "@tanstack/react-query": "^5.59.16",
