--- a/package.json
+++ b/package.json
@@ -119,10 +119,9 @@
     "typescript": "^4.9.5"
   },
   "volta": {
-    "node": "20.10.0",
-    "yarn": "1.22.22"
+    "node": "20.10.0"
   },
-  "packageManager": "yarn@1.22.22",
+  "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af",
   "resolutions": {
     "styled-components": "^5",
     "@types/react": "18.0.15"
