--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "i18next": "^22.5.0",
     "js-base64": "^3.7.5",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.477.0",
     "next": "14.2.18",
     "next-i18next": "^13.2.2",
     "pluralize": "^8.0.0",
