--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "env-cmd": "^10.1.0",
     "es6-shim": "^0.35.8",
     "firebase": "^9.17.2",
+    "form-data": "^4.0.2",
     "fs": "^0.0.1-security",
     "google-auth-library": "^8.7.0",
     "googleapis": "^118.0.0",
