--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "next": "14.2.18",
     "next-i18next": "^13.2.2",
     "pluralize": "^8.0.0",
+    "prop-types": "^15.8.1",
     "qs": "^6.11.0",
     "react": "18.2.0",
     "react-calendar": "4.0.0",
@@ -92,6 +93,7 @@
     "styled-components": "^5.3.5",
     "sweetalert2": "^11.7.2",
     "sweetalert2-react-content": "^5.0.7",
+    "tippy.js": "^6.3.7",
     "use-local-storage": "^3.0.0",
     "web-push": "^3.5.0",
     "xlsx": "^0.18.5"
@@ -100,6 +102,7 @@
     "@ky-is/tailwindcss-plugin-width-height": "^1.0.0",
     "@types/node": "18.0.3",
     "@types/pluralize": "^0.0.33",
+    "@types/prop-types": "^15.7.14",
     "@types/react": "18.0.15",
     "@types/react-calendar": "^3.5.3",
     "@types/react-copy-to-clipboard": "^5.0.4",
