--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "axios": "^1.7.7",
     "chart.js": "^3.9.1",
     "class-transformer": "^0.5.1",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "countup.js": "^2.6.0",
     "crypto-js": "^4.2.0",
     "daisyui": "^2.52.0",
@@ -55,7 +57,7 @@
     "i18next": "^22.5.0",
     "js-base64": "^3.7.5",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.477.0",
+    "lucide-react": "^0.482.0",
     "next": "14.2.18",
     "next-i18next": "^13.2.2",
     "pluralize": "^8.0.0",
@@ -92,6 +94,8 @@
     "styled-components": "^5.3.5",
     "sweetalert2": "^11.7.2",
     "sweetalert2-react-content": "^5.0.7",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "tippy.js": "^6.3.7",
     "use-local-storage": "^3.0.0",
     "web-push": "^3.5.0",
