--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,41 +1,90 @@
 {
-    "compilerOptions": {
-        "target": "es5",
-        "lib": ["dom", "dom.iterable", "esnext"],
-        "allowJs": true,
-        "skipLibCheck": true,
-        "strict": true,
-        "forceConsistentCasingInFileNames": true,
-        "strictPropertyInitialization": false,
-        "experimentalDecorators": true,
-        "noEmit": true,
-        "esModuleInterop": true,
-        "module": "esnext",
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-        "jsx": "preserve",
-        "baseUrl": "./",
-        "paths": {
-            "^public/*": ["./public/*"],
-            "^utils/*": ["./src/utils/*"],
-            "^config/*": ["./src/config/*"],
-            "^hooks/*": ["./src/hooks/*"],
-            "^layouts/*": ["./src/layouts/*"],
-            "^components/*": ["./src/components/*"],
-            "^v3/*": ["./src/components/pages/v3/*"],
-            "^clients/*": ["./src/clients/*"],
-            "^tasting/*": ["./src/clients/public/home/LandingPages/TastingPage/*"],
-            "^admin/*": ["./src/clients/admin/*"],
-            "^atoms/*": ["./src/atoms/*"],
-            "^pages/*": ["./src/pages/*"],
-            "^api/*": ["./src/api/*"],
-            "^models/*": ["./src/models/*"],
-            "^styles/*": ["./src/styles/*"],
-            "^types/*": ["./src/types/*"]
-        },
-        "incremental": true
+  "compilerOptions": {
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "strictPropertyInitialization": false,
+    "experimentalDecorators": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "baseUrl": "./",
+    "paths": {
+      "^public/*": [
+        "./public/*"
+      ],
+      "^utils/*": [
+        "./src/utils/*"
+      ],
+      "^config/*": [
+        "./src/config/*"
+      ],
+      "^hooks/*": [
+        "./src/hooks/*"
+      ],
+      "^layouts/*": [
+        "./src/layouts/*"
+      ],
+      "^components/*": [
+        "./src/components/*"
+      ],
+      "^v3/*": [
+        "./src/components/pages/v3/*"
+      ],
+      "^clients/*": [
+        "./src/clients/*"
+      ],
+      "^tasting/*": [
+        "./src/clients/public/home/LandingPages/TastingPage/*"
+      ],
+      "^admin/*": [
+        "./src/clients/admin/*"
+      ],
+      "^atoms/*": [
+        "./src/atoms/*"
+      ],
+      "^pages/*": [
+        "./src/pages/*"
+      ],
+      "^api/*": [
+        "./src/api/*"
+      ],
+      "^models/*": [
+        "./src/models/*"
+      ],
+      "^styles/*": [
+        "./src/styles/*"
+      ],
+      "^types/*": [
+        "./src/types/*"
+      ]
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "public/service-worker.js"],
-    "exclude": ["node_modules"]
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
+  },
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "public/service-worker.js",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
