--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@measured-im/browser": "^1.3.1",
     "@mona-health/react-input-mask": "^3.0.3",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@react-oauth/google": "^0.7.0",
     "@sentry/nextjs": "^7.77.0",
     "@svgr/webpack": "^6.3.1",
