--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@measured-im/browser": "^1.3.1",
     "@mona-health/react-input-mask": "^3.0.3",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@react-oauth/google": "^0.7.0",
@@ -72,6 +74,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-date-range": "^1.4.0",
     "react-daum-postcode": "^3.1.1",
+    "react-day-picker": "8.10.1",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.3.5",
