--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@measured-im/browser": "^1.3.1",
     "@mona-health/react-input-mask": "^3.0.3",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
