--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy:production": "bash tasks/deploy.production.sh"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.22.15",
     "@googleapis/docs": "^2.0.1",
     "@headlessui/react": "^1.6.6",
     "@measured-im/browser": "^1.3.1",
