--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "@measured-im/browser": "^1.3.1",
     "@mona-health/react-input-mask": "^3.0.3",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@react-oauth/google": "^0.7.0",
     "@sentry/nextjs": "^7.77.0",
     "@svgr/webpack": "^6.3.1",
@@ -39,7 +46,9 @@
     "axios": "^1.8.4",
     "chart.js": "^3.9.1",
     "class-transformer": "^0.5.1",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "countup.js": "^2.6.0",
     "crypto-js": "^4.2.0",
     "daisyui": "^2.52.0",
@@ -55,7 +64,7 @@
     "i18next": "^22.5.0",
     "js-base64": "^3.7.5",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.477.0",
+    "lucide-react": "^0.482.0",
     "next": "14.2.26",
     "next-i18next": "^13.2.2",
     "pluralize": "^8.0.0",
@@ -67,6 +76,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-date-range": "^1.4.0",
     "react-daum-postcode": "^3.1.1",
+    "react-day-picker": "8.10.1",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.3.5",
@@ -92,6 +102,8 @@
     "styled-components": "^5.3.5",
     "sweetalert2": "^11.7.2",
     "sweetalert2-react-content": "^5.0.7",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "tippy.js": "^6.3.7",
     "use-local-storage": "^3.0.0",
     "web-push": "^3.5.0",
