--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@popperjs/core": "^2.11.8",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@react-oauth/google": "^0.7.0",
     "@sentry/nextjs": "^7.77.0",
     "@svgr/webpack": "^6.3.1",
