--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
         "baseUrl": "./",
         "paths": {
             "^public/*": ["./public/*"],
+            "^images/*": ["./src/images/*"],
             "^utils/*": ["./src/utils/*"],
             "^config/*": ["./src/config/*"],
             "^hooks/*": ["./src/hooks/*"],
