--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/plugin-proposal-decorators": "^7.22.15",
     "@googleapis/docs": "^2.0.1",
     "@headlessui/react": "^1.6.6",
+    "@lottiefiles/dotlottie-react": "^0.13.3",
     "@measured-im/browser": "^1.3.1",
     "@mona-health/react-input-mask": "^3.0.3",
     "@popperjs/core": "^2.11.8",
