--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@lottiefiles/dotlottie-react": "^0.13.3",
     "@measured-im/browser": "^1.3.1",
     "@mona-health/react-input-mask": "^3.0.3",
+    "@number-flow/react": "^0.5.9",
     "@popperjs/core": "^2.11.8",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
