공동인증서 불러오기

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,7 @@
             "^pages/*": ["./src/pages/*"],
             "^api/*": ["./src/api/*"],
             "^models/*": ["./src/models/*"],
+            "^lib/*": ["./src/lib/*"],
             "^styles/*": ["./src/styles/*"],
             "^types/*": ["./src/types/*"]
         },
