--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@babel/plugin-proposal-decorators": "^7.22.15",
     "@googleapis/docs": "^2.0.1",
     "@headlessui/react": "^1.6.6",
+    "@mantine/core": "^8.0.2",
+    "@mantine/dates": "^8.0.2",
     "@measured-im/browser": "^1.3.1",
     "@mona-health/react-input-mask": "^3.0.3",
     "@popperjs/core": "^2.11.8",
@@ -58,7 +60,7 @@
     "crypto-js": "^4.2.0",
     "daisyui": "^2.52.0",
     "date-fns": "^2.30.0",
-    "dayjs": "^1.11.8",
+    "dayjs": "^1.11.13",
     "env-cmd": "^10.1.0",
     "es6-shim": "^0.35.8",
     "firebase": "^9.17.2",
@@ -136,7 +138,7 @@
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.6",
     "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.9.5"
+    "typescript": "^5.8.3"
   },
   "volta": {
     "node": "20.10.0"
