--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/aos": "^3.0.4",
     "@types/crypto-js": "^4.1.1",
     "@types/date-fns": "^2.6.0",
+    "@types/event-source-polyfill": "^1.0.5",
     "@types/lodash": "^4.14.194",
     "@types/qs": "^6.9.7",
     "@types/react-date-range": "^1.4.4",
@@ -65,6 +66,7 @@
     "dayjs": "^1.11.13",
     "env-cmd": "^10.1.0",
     "es6-shim": "^0.35.8",
+    "event-source-polyfill": "^1.0.31",
     "firebase": "^9.17.2",
     "form-data": "^4.0.2",
     "fs": "^0.0.1-security",
