--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@slack/web-api": "^7.8.0",
     "@svgr/webpack": "^6.3.1",
     "@tailwindcss/typography": "^0.5.4",
+    "@tanstack/query-core": "^5.83.0",
     "@tanstack/react-query": "^5.59.16",
     "@tippyjs/react": "^4.2.6",
     "@toast-ui/react-editor": "^3.2.3",
