--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/aos": "^3.0.4",
     "@types/crypto-js": "^4.1.1",
     "@types/date-fns": "^2.6.0",
+    "@types/html-minifier-next": "^1.1.0",
     "@types/lodash": "^4.14.194",
     "@types/qs": "^6.9.7",
     "@types/react-date-range": "^1.4.4",
@@ -72,6 +73,7 @@
     "fs": "^0.0.1-security",
     "google-auth-library": "^8.7.0",
     "googleapis": "^118.0.0",
+    "html-minifier-next": "^1.1.5",
     "i18next": "^22.5.0",
     "js-base64": "^3.7.5",
     "lodash": "^4.17.21",
