--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "@slack/web-api": "^7.8.0",
     "@svgr/webpack": "^6.3.1",
     "@tailwindcss/typography": "^0.5.4",
+    "@tanstack/query-core": "^5.85.6",
     "@tanstack/react-query": "^5.59.16",
     "@tippyjs/react": "^4.2.6",
     "@toast-ui/react-editor": "^3.2.3",
     "@tosspayments/payment-widget-sdk": "^0.12.0",
     "@tosspayments/tosspayments-sdk": "^2.2.4",
     "@types/aos": "^3.0.4",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/crypto-js": "^4.1.1",
     "@types/date-fns": "^2.6.0",
     "@types/event-source-polyfill": "^1.0.5",
@@ -54,6 +56,7 @@
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "axios": "^1.8.4",
+    "canvas-confetti": "^1.9.3",
     "chart.js": "^3.9.1",
     "class-transformer": "^0.5.1",
     "class-variance-authority": "^0.7.1",
@@ -69,7 +72,6 @@
     "event-source-polyfill": "^1.0.31",
     "firebase": "^9.17.2",
     "form-data": "^4.0.2",
-    "fs": "^0.0.1-security",
     "google-auth-library": "^8.7.0",
     "googleapis": "^118.0.0",
     "i18next": "^22.5.0",
